Add getDiscoveredContracts to opStackSmart, some fixes.

--- a/packages/backend/discovery/_templates/eigenlayer/EjectionManager/template.jsonc
+++ b/packages/backend/discovery/_templates/eigenlayer/EjectionManager/template.jsonc
@@ -19,7 +19,7 @@
       }
     },
     "ejectableStakePercent": {
-      "description": "Max stake to be ejectable per time delta",
+      "description": "Max stake to be ejectable per time delta.",
       "handler": {
         "type": "arrayFromOneEvent",
         "event": "QuorumEjectionParams",
