Add flatten command to l2b (#4418)

--- a/packages/l2b/package.json
+++ b/packages/l2b/package.json
@@ -21,8 +21,10 @@
     "@l2beat/backend-tools": "*",
     "@l2beat/discovery-types": "*",
     "@l2beat/shared": "*",
+    "@l2beat/config": "*",
     "@l2beat/shared-pure": "*",
     "cmd-ts": "^0.13.0",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "chalk": "^4.1.2"
   }
 }
