--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -64,7 +64,6 @@
     "pino-pretty": "^11.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.5"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
