--- a/packages/backend/discovery/zora/ethereum/config.jsonc
+++ b/packages/backend/discovery/zora/ethereum/config.jsonc
@@ -7,33 +7,9 @@
     "0x83A4521A3573Ca87f3a971B169C5A0E1d34481c3"
   ],
   "names": {
-    "0x1a0ad011913A150f69f6A19DF447A0CfD9551054": "OptimismPortal",
-    "0x3e2Ea9B92B7E48A52296fD261dc26fd995284631": "L1StandardBridge",
-    "0x9E6204F750cD866b299594e2aC9eA824E2e5f95c": "L2OutputOracle",
-    "0xEF8115F2733fb2033a7c756402Fc1deaa56550Ef": "AddressManager",
-    "0xcA4571b1ecBeC86Ea2E660d242c1c29FcB55Dc72": "ChallengerMultisig",
-    "0xC72aE5c7cc9a332699305E29F68Be66c73b60542": "ZoraMultisig",
-    "0xdC40a14d9abd6F410226f1E6de71aE03441ca506": "L1CrossDomainMessenger",
-    "0xA3cAB0126d5F504B071b81a3e8A2BBBF17930d86": "SystemConfig",
-    "0x5a0Aae59D09fccBdDb6C6CcEB07B7279367C3d2A": "SuperchainProxyAdminOwner",
-    "0xc2819DC788505Aac350142A7A707BF9D03E3Bd03": "SecurityCouncilMultisig",
-    "0x847B5c174615B1B7fDF770882256e2D3E95b9D92": "FoundationMultisig_1",
-    "0x9BA6e03D8B90dE867373Db8cF1A58d2F7F006b3A": "FoundationMultisig_2",
-    "0x543bA4AADBAb8f9025686Bd03993043599c6fB04": "SuperchainProxyAdmin",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
-    "0x09f7150D8c019BeF34450d6920f6B3608ceFdAf2": "GuardianMultisig",
-    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule"
+    "0xC72aE5c7cc9a332699305E29F68Be66c73b60542": "ZoraMultisig"
   },
   "overrides": {
-    "FoundationMultisig_1": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "FoundationMultisig_2": {
-      "ignoreInWatchMode": ["nonce"]
-    },
-    "LivenessModule": {
-      "ignoreMethods": ["getRequiredThreshold"]
-    },
     "0xc52BC7344e24e39dF1bf026fe05C4e6E23CfBcFf": {
       "extends": "opstack/OptimismMintableERC20Factory"
     },
