--- a/packages/backend/discovery/amarok/ethereum/config.jsonc
+++ b/packages/backend/discovery/amarok/ethereum/config.jsonc
@@ -27,9 +27,9 @@
     "0xE8cF9EbB1cFB137c692a0a4E470E257B9417d116": "PolygonHubConnector",
     "0xf5a3372ed529FCD0690b6013EAaE04170ec0626b": "NewWormholeHubConnector",
     "0x5B0E1a507E786f0a7c11C972ad5F4dd254661e24": "MantleHubConnector",
-    "0x23b7abe4cc664F24Eb68E80cFAdc572857799a94": "NewOptimismHubConnector",
+    "0x23b7abe4cc664F24Eb68E80cFAdc572857799a94": "BaseHubConnector", // currently removed
     "0x7ed49D0a13255802A281C08688563bd8D5f726b1": "PolygonZkHubConnector",
-    "0x9Ba7D2Ab079Bd1924859e2fECDAD1bEBe5B119Fa": "OptimismV0HubConnector",
+    "0x9Ba7D2Ab079Bd1924859e2fECDAD1bEBe5B119Fa": "MetisHubConnector",
     "0x7b2bE683266909A6a4068e743083dd40621d663E": "ModeHubConnector",
     "0x279fDA9AdDB854541f0bb86733d924e28c24c625": "xLayerZkHubConnector"
   },
@@ -183,7 +183,7 @@
       "ignoreRelatives": ["AMB", "mirrorConnector", "stateCommitmentChain"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
-    "NewOptimismHubConnector": {
+    "BaseHubConnector": {
       "ignoreRelatives": ["AMB", "mirrorConnector", "OPTIMISM_PORTAL"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
@@ -195,7 +195,7 @@
       "ignoreRelatives": ["AMB", "mirrorConnector"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
-    "OptimismV0HubConnector": {
+    "MetisHubConnector": {
       "ignoreRelatives": ["AMB", "mirrorConnector", "stateCommitmentChain"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
