--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -2,11 +2,15 @@
   "=nil;": true,
   "across-v3": true,
   "aevo": true,
+  "aiechain": true,
+  "alephzero": true,
   "alienx": true,
   "align": true,
   "allbridge": false,
+  "alphadune": true,
   "amarok": true,
   "ancient": true,
+  "animechain": true,
   "ankr": true,
   "anomaly": true,
   "apechain": true,
@@ -51,6 +55,7 @@
   "deversifi": true,
   "dodochain": true,
   "dydx": true,
+  "ebi": true,
   "eclipse": true,
   "edgeless": true,
   "educhain": true,
@@ -66,6 +71,7 @@
   "fuelv1": true,
   "galxegravity": true,
   "gluon": true,
+  "gpt": true,
   "gravity": true,
   "grvt": true,
   "harmony": true,
@@ -73,11 +79,13 @@
   "honeypot": true,
   "hook": true,
   "hop": true,
+  "hybrid": true,
   "hychain": true,
   "hyphen": true,
   "hypr": true,
   "immutablex": true,
   "immutablezkevm": true,
+  "invm": true,
   "kakarotzkevm": true,
   "karak": true,
   "kinto": true,
@@ -97,8 +105,10 @@
   "lzomnichain": false,
   "mantapacific": true,
   "mantle": true,
+  "meliora": true,
   "metal": true,
   "metis": true,
+  "millicent": true,
   "mint": true,
   "mode": true,
   "molten": true,
@@ -106,7 +116,8 @@
   "move": true,
   "multichain": true,
   "muster": true,
-  "mxc": false,
+  "mvchain": true,
+  "mxc": true,
   "myria": true,
   "myshell": true,
   "near": true,
@@ -123,10 +134,12 @@
   "orbit": false,
   "orbiter": true,
   "orderly": true,
+  "oursong": true,
   "palm": true,
   "paradex": true,
   "parallel": true,
   "payy": true,
+  "playblock": true,
   "playchain": true,
   "plumenetwork": true,
   "pNetwork": true,
@@ -153,8 +166,10 @@
   "satellite": true,
   "scroll": true,
   "skale-ima": true,
-  "socket": false,
+  "socialnetwork": true,
+  "socket": true,
   "sollet": true,
+  "songprotocol": true,
   "sophon": true,
   "sorare": true,
   "specular": true,
@@ -178,7 +193,11 @@
   "termstructure": true,
   "teva": true,
   "tradable": true,
+  "transporter": true,
   "treasure": true,
+  "winr": true,
+  "wirex": true,
+  "witness": true,
   "world": true,
   "wormholeV1": true,
   "xai": true,
