mod template to silence discovery spam

--- a/packages/backend/discovery/_templates/zklinknova/secondaryZkLink/template.jsonc
+++ b/packages/backend/discovery/_templates/zklinknova/secondaryZkLink/template.jsonc
@@ -5,5 +5,13 @@
     "l2LogsRootHashes",
     "proxiableUUID",
     "priorityOpSyncStatus"
+  ],
+  "ignoreInWatchMode": [
+    "getTotalBatchesExecuted",
+    "getTotalPriorityTxs",
+    "totalBatchesExecuted",
+    "totalPriorityTxs",
+    "totalSyncedPriorityTxs",
+    "totalValidatorForwardFee"
   ]
 }
